--- a/h20.5_sneak_peek.md
+++ b/h20.5_sneak_peek.md
@@ -171,7 +171,7 @@ a
 - Multi-parameter support for resource specification in HQueue Scheduler TOP
 - A host of UI and UX enhancements to aid in debugging and visualization
 
-## Houdini Engine | Plugins | HQueue | Plantforms
+## Houdini Engine | Plugins | HQueue | Platforms
 - Many performance optimizations for HEngine
 - Performance analysis and monitoring support for HEngine API
 - Sample HEngine Python application for script-based integrations
@@ -194,7 +194,7 @@ a
 - MySQL and PostgreSQL support for higher HQueue performance
 - Ability to specify custom resources on jobs submitted from HQueue ROP
 - HQueue Server and client daemon managed as systemd services on Linux
-- Adherence VFX Reference Plantform CY2024 except of Qt 6.5
+- Adherence VFX Reference Platform CY2024 except of Qt 6.5
 - Python 3.11 default and 3.10 separate download
 
 ## General | Modeling | Environments
@@ -255,4 +255,3 @@ a
 - ML-ready via ONNX inference node
 
 ...And a dedicated SOP & TOP toolset to help automate ML training
-
