--- a/h20.5_sneak_peek.md
+++ b/h20.5_sneak_peek.md
@@ -1,5 +1,6 @@
 # H20.5 Sneak Peek
-<iframe width="794" height="447" src="https://www.youtube.com/embed/E_uxf36y9qo" title="Houdini 20.5 Sneak Peek" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+[![Sneak Peek](https://i.ytimg.com/vi_webp/E_uxf36y9qo/maxresdefault.webp)](https://www.youtube.com/watch?v=E_uxf36y9qo)
 
 ## MPM
 - Fast GPU accelerated Material Point Method solver
