--- a/h20.5_sneak_peek.md
+++ b/h20.5_sneak_peek.md
@@ -2,6 +2,8 @@
 
 [![Sneak Peek](https://i.ytimg.com/vi_webp/E_uxf36y9qo/maxresdefault.webp)](https://www.youtube.com/watch?v=E_uxf36y9qo)
 
+Check out some of the new features coming in Houdini 20.5! For a more in-depth look, we'll be hosting the H20.5 Keynote Presentation in Paris on June 18th – with the recording published soon after. Stay tuned!
+
 ## MPM
 - Fast GPU accelerated Material Point Method solver
 - Multi-solver simulation of all types of matter from fluids to solids
